src/testing/asciimath/parser.output
Terminals unused in grammar

    LINESTART
    EQUALS
    LESSTHAN
    GREATERTHAN
    LTHANEQTO
    GTHANEQTO
    TEXT
    BB
    HAT
    BRACK


State 74 conflicts: 1 shift/reduce
State 88 conflicts: 66 shift/reduce
State 92 conflicts: 5 shift/reduce
State 94 conflicts: 5 shift/reduce
State 102 conflicts: 67 reduce/reduce
State 103 conflicts: 5 shift/reduce


Grammar

    0 $accept: asciimath $end

    1 asciimath: %empty
    2          | asciimath line

    3 line: ENDL
    4     | expr ENDL

    5 expr: intexpr expr
    6     | intexpr

    7 intexpr: simpexpr EXP simpexpr
    8        | simpexpr

    9 simpexpr: variable
   10         | left simpexpr right
   11         | unary simpexpr
   12         | simpexpr bin simpexpr
   13         | binfunc simpexpr simpexpr

   14 left: LBRAC
   15     | LSBRAC
   16     | LCBRAC
   17     | LANGLE
   18     | LABRAC

   19 right: RBRAC
   20      | RSBRAC
   21      | RCBRAC
   22      | RANGLE
   23      | RABRAC

   24 variable: num
   25         | greek
   26         | const

   27 num: INT
   28    | FLOAT

   29 greek: ALPHA
   30      | BETA
   31      | GAMMA
   32      | GAMMACAP
   33      | DELTA
   34      | DELTACAP
   35      | EPSILON
   36      | VAREPSILON
   37      | ZETA
   38      | ETA
   39      | THETA
   40      | THETACAP
   41      | VARTHETA
   42      | IOTA
   43      | KAPPA
   44      | LAMBDA
   45      | LAMBDACAP
   46      | MU
   47      | NU
   48      | XI
   49      | XICAP
   50      | PI
   51      | PICAP
   52      | SIGMA
   53      | SIGMACAP
   54      | TAU
   55      | UPSILON
   56      | PHI
   57      | PHICAP
   58      | VARPHI
   59      | CHI
   60      | PSI
   61      | PSICAP
   62      | OMEGA

   63 const: E
   64      | INFINITY

   65 bin: ADD
   66    | SUB
   67    | MUL
   68    | DIV
   69    | EXP

   70 binfunc: FRAC
   71        | ROOT

   72 unary: SUB
   73      | SQRT
   74      | LOG
   75      | LN
   76      | ABS
   77      | FLOOR
   78      | CEIL
   79      | ASIN
   80      | ACOS
   81      | ATAN
   82      | SINH
   83      | COSH
   84      | TANH
   85      | SECH
   86      | CSCH
   87      | COTH
   88      | SIN
   89      | COS
   90      | TAN
   91      | SEC
   92      | CSC
   93      | COT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT <ival> (258) 27
    FLOAT <fval> (259) 28
    LINESTART (260)
    EQUALS (261)
    LESSTHAN (262)
    GREATERTHAN (263)
    LTHANEQTO (264)
    GTHANEQTO (265)
    ALPHA (266) 29
    BETA (267) 30
    GAMMA (268) 31
    GAMMACAP (269) 32
    DELTA (270) 33
    DELTACAP (271) 34
    EPSILON (272) 35
    VAREPSILON (273) 36
    ZETA (274) 37
    ETA (275) 38
    THETA (276) 39
    THETACAP (277) 40
    VARTHETA (278) 41
    IOTA (279) 42
    KAPPA (280) 43
    LAMBDA (281) 44
    LAMBDACAP (282) 45
    MU (283) 46
    NU (284) 47
    XI (285) 48
    XICAP (286) 49
    PI (287) 50
    PICAP (288) 51
    SIGMA (289) 52
    SIGMACAP (290) 53
    TAU (291) 54
    UPSILON (292) 55
    PHI (293) 56
    PHICAP (294) 57
    VARPHI (295) 58
    CHI (296) 59
    PSI (297) 60
    PSICAP (298) 61
    OMEGA (299) 62
    E (300) 63
    INFINITY (301) 64
    SQRT (302) 73
    LOG (303) 74
    LN (304) 75
    ABS (305) 76
    FLOOR (306) 77
    CEIL (307) 78
    ASIN (308) 79
    ACOS (309) 80
    ATAN (310) 81
    SINH (311) 82
    COSH (312) 83
    TANH (313) 84
    SECH (314) 85
    CSCH (315) 86
    COTH (316) 87
    SIN (317) 88
    COS (318) 89
    TAN (319) 90
    SEC (320) 91
    CSC (321) 92
    COT (322) 93
    TEXT (323)
    BB (324)
    HAT (325)
    FRAC (326) 70
    ROOT (327) 71
    ADD (328) 65
    SUB (329) 66 72
    MUL (330) 67
    DIV (331) 68
    NEG (332)
    BRACK (333)
    EXP (334) 7 69
    LBRAC (335) 14
    LSBRAC (336) 15
    LCBRAC (337) 16
    LANGLE (338) 17
    LABRAC (339) 18
    RBRAC (340) 19
    RSBRAC (341) 20
    RCBRAC (342) 21
    RANGLE (343) 22
    RABRAC (344) 23
    ENDL (345) 3 4


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    asciimath (92)
        on left: 1 2
        on right: 0 2
    line (93)
        on left: 3 4
        on right: 2
    expr (94)
        on left: 5 6
        on right: 4 5
    intexpr (95)
        on left: 7 8
        on right: 5 6
    simpexpr (96)
        on left: 9 10 11 12 13
        on right: 7 8 10 11 12 13
    left (97)
        on left: 14 15 16 17 18
        on right: 10
    right (98)
        on left: 19 20 21 22 23
        on right: 10
    variable (99)
        on left: 24 25 26
        on right: 9
    num (100)
        on left: 27 28
        on right: 24
    greek (101)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 25
    const (102)
        on left: 63 64
        on right: 26
    bin (103)
        on left: 65 66 67 68 69
        on right: 12
    binfunc (104)
        on left: 70 71
        on right: 13
    unary (105)
        on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 11


State 0

    0 $accept: . asciimath $end

    $default  reduce using rule 1 (asciimath)

    asciimath  go to state 1


State 1

    0 $accept: asciimath . $end
    2 asciimath: asciimath . line

    $end        shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    ALPHA       shift, and go to state 5
    BETA        shift, and go to state 6
    GAMMA       shift, and go to state 7
    GAMMACAP    shift, and go to state 8
    DELTA       shift, and go to state 9
    DELTACAP    shift, and go to state 10
    EPSILON     shift, and go to state 11
    VAREPSILON  shift, and go to state 12
    ZETA        shift, and go to state 13
    ETA         shift, and go to state 14
    THETA       shift, and go to state 15
    THETACAP    shift, and go to state 16
    VARTHETA    shift, and go to state 17
    IOTA        shift, and go to state 18
    KAPPA       shift, and go to state 19
    LAMBDA      shift, and go to state 20
    LAMBDACAP   shift, and go to state 21
    MU          shift, and go to state 22
    NU          shift, and go to state 23
    XI          shift, and go to state 24
    XICAP       shift, and go to state 25
    PI          shift, and go to state 26
    PICAP       shift, and go to state 27
    SIGMA       shift, and go to state 28
    SIGMACAP    shift, and go to state 29
    TAU         shift, and go to state 30
    UPSILON     shift, and go to state 31
    PHI         shift, and go to state 32
    PHICAP      shift, and go to state 33
    VARPHI      shift, and go to state 34
    CHI         shift, and go to state 35
    PSI         shift, and go to state 36
    PSICAP      shift, and go to state 37
    OMEGA       shift, and go to state 38
    E           shift, and go to state 39
    INFINITY    shift, and go to state 40
    SQRT        shift, and go to state 41
    LOG         shift, and go to state 42
    LN          shift, and go to state 43
    ABS         shift, and go to state 44
    FLOOR       shift, and go to state 45
    CEIL        shift, and go to state 46
    ASIN        shift, and go to state 47
    ACOS        shift, and go to state 48
    ATAN        shift, and go to state 49
    SINH        shift, and go to state 50
    COSH        shift, and go to state 51
    TANH        shift, and go to state 52
    SECH        shift, and go to state 53
    CSCH        shift, and go to state 54
    COTH        shift, and go to state 55
    SIN         shift, and go to state 56
    COS         shift, and go to state 57
    TAN         shift, and go to state 58
    SEC         shift, and go to state 59
    CSC         shift, and go to state 60
    COT         shift, and go to state 61
    FRAC        shift, and go to state 62
    ROOT        shift, and go to state 63
    SUB         shift, and go to state 64
    LBRAC       shift, and go to state 65
    LSBRAC      shift, and go to state 66
    LCBRAC      shift, and go to state 67
    LANGLE      shift, and go to state 68
    LABRAC      shift, and go to state 69
    ENDL        shift, and go to state 70

    line      go to state 71
    expr      go to state 72
    intexpr   go to state 73
    simpexpr  go to state 74
    left      go to state 75
    variable  go to state 76
    num       go to state 77
    greek     go to state 78
    const     go to state 79
    binfunc   go to state 80
    unary     go to state 81


State 2

    0 $accept: asciimath $end .

    $default  accept


State 3

   27 num: INT .

    $default  reduce using rule 27 (num)


State 4

   28 num: FLOAT .

    $default  reduce using rule 28 (num)


State 5

   29 greek: ALPHA .

    $default  reduce using rule 29 (greek)


State 6

   30 greek: BETA .

    $default  reduce using rule 30 (greek)


State 7

   31 greek: GAMMA .

    $default  reduce using rule 31 (greek)


State 8

   32 greek: GAMMACAP .

    $default  reduce using rule 32 (greek)


State 9

   33 greek: DELTA .

    $default  reduce using rule 33 (greek)


State 10

   34 greek: DELTACAP .

    $default  reduce using rule 34 (greek)


State 11

   35 greek: EPSILON .

    $default  reduce using rule 35 (greek)


State 12

   36 greek: VAREPSILON .

    $default  reduce using rule 36 (greek)


State 13

   37 greek: ZETA .

    $default  reduce using rule 37 (greek)


State 14

   38 greek: ETA .

    $default  reduce using rule 38 (greek)


State 15

   39 greek: THETA .

    $default  reduce using rule 39 (greek)


State 16

   40 greek: THETACAP .

    $default  reduce using rule 40 (greek)


State 17

   41 greek: VARTHETA .

    $default  reduce using rule 41 (greek)


State 18

   42 greek: IOTA .

    $default  reduce using rule 42 (greek)


State 19

   43 greek: KAPPA .

    $default  reduce using rule 43 (greek)


State 20

   44 greek: LAMBDA .

    $default  reduce using rule 44 (greek)


State 21

   45 greek: LAMBDACAP .

    $default  reduce using rule 45 (greek)


State 22

   46 greek: MU .

    $default  reduce using rule 46 (greek)


State 23

   47 greek: NU .

    $default  reduce using rule 47 (greek)


State 24

   48 greek: XI .

    $default  reduce using rule 48 (greek)


State 25

   49 greek: XICAP .

    $default  reduce using rule 49 (greek)


State 26

   50 greek: PI .

    $default  reduce using rule 50 (greek)


State 27

   51 greek: PICAP .

    $default  reduce using rule 51 (greek)


State 28

   52 greek: SIGMA .

    $default  reduce using rule 52 (greek)


State 29

   53 greek: SIGMACAP .

    $default  reduce using rule 53 (greek)


State 30

   54 greek: TAU .

    $default  reduce using rule 54 (greek)


State 31

   55 greek: UPSILON .

    $default  reduce using rule 55 (greek)


State 32

   56 greek: PHI .

    $default  reduce using rule 56 (greek)


State 33

   57 greek: PHICAP .

    $default  reduce using rule 57 (greek)


State 34

   58 greek: VARPHI .

    $default  reduce using rule 58 (greek)


State 35

   59 greek: CHI .

    $default  reduce using rule 59 (greek)


State 36

   60 greek: PSI .

    $default  reduce using rule 60 (greek)


State 37

   61 greek: PSICAP .

    $default  reduce using rule 61 (greek)


State 38

   62 greek: OMEGA .

    $default  reduce using rule 62 (greek)


State 39

   63 const: E .

    $default  reduce using rule 63 (const)


State 40

   64 const: INFINITY .

    $default  reduce using rule 64 (const)


State 41

   73 unary: SQRT .

    $default  reduce using rule 73 (unary)


State 42

   74 unary: LOG .

    $default  reduce using rule 74 (unary)


State 43

   75 unary: LN .

    $default  reduce using rule 75 (unary)


State 44

   76 unary: ABS .

    $default  reduce using rule 76 (unary)


State 45

   77 unary: FLOOR .

    $default  reduce using rule 77 (unary)


State 46

   78 unary: CEIL .

    $default  reduce using rule 78 (unary)


State 47

   79 unary: ASIN .

    $default  reduce using rule 79 (unary)


State 48

   80 unary: ACOS .

    $default  reduce using rule 80 (unary)


State 49

   81 unary: ATAN .

    $default  reduce using rule 81 (unary)


State 50

   82 unary: SINH .

    $default  reduce using rule 82 (unary)


State 51

   83 unary: COSH .

    $default  reduce using rule 83 (unary)


State 52

   84 unary: TANH .

    $default  reduce using rule 84 (unary)


State 53

   85 unary: SECH .

    $default  reduce using rule 85 (unary)


State 54

   86 unary: CSCH .

    $default  reduce using rule 86 (unary)


State 55

   87 unary: COTH .

    $default  reduce using rule 87 (unary)


State 56

   88 unary: SIN .

    $default  reduce using rule 88 (unary)


State 57

   89 unary: COS .

    $default  reduce using rule 89 (unary)


State 58

   90 unary: TAN .

    $default  reduce using rule 90 (unary)


State 59

   91 unary: SEC .

    $default  reduce using rule 91 (unary)


State 60

   92 unary: CSC .

    $default  reduce using rule 92 (unary)


State 61

   93 unary: COT .

    $default  reduce using rule 93 (unary)


State 62

   70 binfunc: FRAC .

    $default  reduce using rule 70 (binfunc)


State 63

   71 binfunc: ROOT .

    $default  reduce using rule 71 (binfunc)


State 64

   72 unary: SUB .

    $default  reduce using rule 72 (unary)


State 65

   14 left: LBRAC .

    $default  reduce using rule 14 (left)


State 66

   15 left: LSBRAC .

    $default  reduce using rule 15 (left)


State 67

   16 left: LCBRAC .

    $default  reduce using rule 16 (left)


State 68

   17 left: LANGLE .

    $default  reduce using rule 17 (left)


State 69

   18 left: LABRAC .

    $default  reduce using rule 18 (left)


State 70

    3 line: ENDL .

    $default  reduce using rule 3 (line)


State 71

    2 asciimath: asciimath line .

    $default  reduce using rule 2 (asciimath)


State 72

    4 line: expr . ENDL

    ENDL  shift, and go to state 82


State 73

    5 expr: intexpr . expr
    6     | intexpr .

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    ALPHA       shift, and go to state 5
    BETA        shift, and go to state 6
    GAMMA       shift, and go to state 7
    GAMMACAP    shift, and go to state 8
    DELTA       shift, and go to state 9
    DELTACAP    shift, and go to state 10
    EPSILON     shift, and go to state 11
    VAREPSILON  shift, and go to state 12
    ZETA        shift, and go to state 13
    ETA         shift, and go to state 14
    THETA       shift, and go to state 15
    THETACAP    shift, and go to state 16
    VARTHETA    shift, and go to state 17
    IOTA        shift, and go to state 18
    KAPPA       shift, and go to state 19
    LAMBDA      shift, and go to state 20
    LAMBDACAP   shift, and go to state 21
    MU          shift, and go to state 22
    NU          shift, and go to state 23
    XI          shift, and go to state 24
    XICAP       shift, and go to state 25
    PI          shift, and go to state 26
    PICAP       shift, and go to state 27
    SIGMA       shift, and go to state 28
    SIGMACAP    shift, and go to state 29
    TAU         shift, and go to state 30
    UPSILON     shift, and go to state 31
    PHI         shift, and go to state 32
    PHICAP      shift, and go to state 33
    VARPHI      shift, and go to state 34
    CHI         shift, and go to state 35
    PSI         shift, and go to state 36
    PSICAP      shift, and go to state 37
    OMEGA       shift, and go to state 38
    E           shift, and go to state 39
    INFINITY    shift, and go to state 40
    SQRT        shift, and go to state 41
    LOG         shift, and go to state 42
    LN          shift, and go to state 43
    ABS         shift, and go to state 44
    FLOOR       shift, and go to state 45
    CEIL        shift, and go to state 46
    ASIN        shift, and go to state 47
    ACOS        shift, and go to state 48
    ATAN        shift, and go to state 49
    SINH        shift, and go to state 50
    COSH        shift, and go to state 51
    TANH        shift, and go to state 52
    SECH        shift, and go to state 53
    CSCH        shift, and go to state 54
    COTH        shift, and go to state 55
    SIN         shift, and go to state 56
    COS         shift, and go to state 57
    TAN         shift, and go to state 58
    SEC         shift, and go to state 59
    CSC         shift, and go to state 60
    COT         shift, and go to state 61
    FRAC        shift, and go to state 62
    ROOT        shift, and go to state 63
    SUB         shift, and go to state 64
    LBRAC       shift, and go to state 65
    LSBRAC      shift, and go to state 66
    LCBRAC      shift, and go to state 67
    LANGLE      shift, and go to state 68
    LABRAC      shift, and go to state 69

    $default  reduce using rule 6 (expr)

    expr      go to state 83
    intexpr   go to state 73
    simpexpr  go to state 74
    left      go to state 75
    variable  go to state 76
    num       go to state 77
    greek     go to state 78
    const     go to state 79
    binfunc   go to state 80
    unary     go to state 81


State 74

    7 intexpr: simpexpr . EXP simpexpr
    8        | simpexpr .
   12 simpexpr: simpexpr . bin simpexpr

    ADD  shift, and go to state 84
    SUB  shift, and go to state 85
    MUL  shift, and go to state 86
    DIV  shift, and go to state 87
    EXP  shift, and go to state 88

    SUB       [reduce using rule 8 (intexpr)]
    $default  reduce using rule 8 (intexpr)

    bin  go to state 89


State 75

   10 simpexpr: left . simpexpr right

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    ALPHA       shift, and go to state 5
    BETA        shift, and go to state 6
    GAMMA       shift, and go to state 7
    GAMMACAP    shift, and go to state 8
    DELTA       shift, and go to state 9
    DELTACAP    shift, and go to state 10
    EPSILON     shift, and go to state 11
    VAREPSILON  shift, and go to state 12
    ZETA        shift, and go to state 13
    ETA         shift, and go to state 14
    THETA       shift, and go to state 15
    THETACAP    shift, and go to state 16
    VARTHETA    shift, and go to state 17
    IOTA        shift, and go to state 18
    KAPPA       shift, and go to state 19
    LAMBDA      shift, and go to state 20
    LAMBDACAP   shift, and go to state 21
    MU          shift, and go to state 22
    NU          shift, and go to state 23
    XI          shift, and go to state 24
    XICAP       shift, and go to state 25
    PI          shift, and go to state 26
    PICAP       shift, and go to state 27
    SIGMA       shift, and go to state 28
    SIGMACAP    shift, and go to state 29
    TAU         shift, and go to state 30
    UPSILON     shift, and go to state 31
    PHI         shift, and go to state 32
    PHICAP      shift, and go to state 33
    VARPHI      shift, and go to state 34
    CHI         shift, and go to state 35
    PSI         shift, and go to state 36
    PSICAP      shift, and go to state 37
    OMEGA       shift, and go to state 38
    E           shift, and go to state 39
    INFINITY    shift, and go to state 40
    SQRT        shift, and go to state 41
    LOG         shift, and go to state 42
    LN          shift, and go to state 43
    ABS         shift, and go to state 44
    FLOOR       shift, and go to state 45
    CEIL        shift, and go to state 46
    ASIN        shift, and go to state 47
    ACOS        shift, and go to state 48
    ATAN        shift, and go to state 49
    SINH        shift, and go to state 50
    COSH        shift, and go to state 51
    TANH        shift, and go to state 52
    SECH        shift, and go to state 53
    CSCH        shift, and go to state 54
    COTH        shift, and go to state 55
    SIN         shift, and go to state 56
    COS         shift, and go to state 57
    TAN         shift, and go to state 58
    SEC         shift, and go to state 59
    CSC         shift, and go to state 60
    COT         shift, and go to state 61
    FRAC        shift, and go to state 62
    ROOT        shift, and go to state 63
    SUB         shift, and go to state 64
    LBRAC       shift, and go to state 65
    LSBRAC      shift, and go to state 66
    LCBRAC      shift, and go to state 67
    LANGLE      shift, and go to state 68
    LABRAC      shift, and go to state 69

    simpexpr  go to state 90
    left      go to state 75
    variable  go to state 76
    num       go to state 77
    greek     go to state 78
    const     go to state 79
    binfunc   go to state 80
    unary     go to state 81


State 76

    9 simpexpr: variable .

    $default  reduce using rule 9 (simpexpr)


State 77

   24 variable: num .

    $default  reduce using rule 24 (variable)


State 78

   25 variable: greek .

    $default  reduce using rule 25 (variable)


State 79

   26 variable: const .

    $default  reduce using rule 26 (variable)


State 80

   13 simpexpr: binfunc . simpexpr simpexpr

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    ALPHA       shift, and go to state 5
    BETA        shift, and go to state 6
    GAMMA       shift, and go to state 7
    GAMMACAP    shift, and go to state 8
    DELTA       shift, and go to state 9
    DELTACAP    shift, and go to state 10
    EPSILON     shift, and go to state 11
    VAREPSILON  shift, and go to state 12
    ZETA        shift, and go to state 13
    ETA         shift, and go to state 14
    THETA       shift, and go to state 15
    THETACAP    shift, and go to state 16
    VARTHETA    shift, and go to state 17
    IOTA        shift, and go to state 18
    KAPPA       shift, and go to state 19
    LAMBDA      shift, and go to state 20
    LAMBDACAP   shift, and go to state 21
    MU          shift, and go to state 22
    NU          shift, and go to state 23
    XI          shift, and go to state 24
    XICAP       shift, and go to state 25
    PI          shift, and go to state 26
    PICAP       shift, and go to state 27
    SIGMA       shift, and go to state 28
    SIGMACAP    shift, and go to state 29
    TAU         shift, and go to state 30
    UPSILON     shift, and go to state 31
    PHI         shift, and go to state 32
    PHICAP      shift, and go to state 33
    VARPHI      shift, and go to state 34
    CHI         shift, and go to state 35
    PSI         shift, and go to state 36
    PSICAP      shift, and go to state 37
    OMEGA       shift, and go to state 38
    E           shift, and go to state 39
    INFINITY    shift, and go to state 40
    SQRT        shift, and go to state 41
    LOG         shift, and go to state 42
    LN          shift, and go to state 43
    ABS         shift, and go to state 44
    FLOOR       shift, and go to state 45
    CEIL        shift, and go to state 46
    ASIN        shift, and go to state 47
    ACOS        shift, and go to state 48
    ATAN        shift, and go to state 49
    SINH        shift, and go to state 50
    COSH        shift, and go to state 51
    TANH        shift, and go to state 52
    SECH        shift, and go to state 53
    CSCH        shift, and go to state 54
    COTH        shift, and go to state 55
    SIN         shift, and go to state 56
    COS         shift, and go to state 57
    TAN         shift, and go to state 58
    SEC         shift, and go to state 59
    CSC         shift, and go to state 60
    COT         shift, and go to state 61
    FRAC        shift, and go to state 62
    ROOT        shift, and go to state 63
    SUB         shift, and go to state 64
    LBRAC       shift, and go to state 65
    LSBRAC      shift, and go to state 66
    LCBRAC      shift, and go to state 67
    LANGLE      shift, and go to state 68
    LABRAC      shift, and go to state 69

    simpexpr  go to state 91
    left      go to state 75
    variable  go to state 76
    num       go to state 77
    greek     go to state 78
    const     go to state 79
    binfunc   go to state 80
    unary     go to state 81


State 81

   11 simpexpr: unary . simpexpr

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    ALPHA       shift, and go to state 5
    BETA        shift, and go to state 6
    GAMMA       shift, and go to state 7
    GAMMACAP    shift, and go to state 8
    DELTA       shift, and go to state 9
    DELTACAP    shift, and go to state 10
    EPSILON     shift, and go to state 11
    VAREPSILON  shift, and go to state 12
    ZETA        shift, and go to state 13
    ETA         shift, and go to state 14
    THETA       shift, and go to state 15
    THETACAP    shift, and go to state 16
    VARTHETA    shift, and go to state 17
    IOTA        shift, and go to state 18
    KAPPA       shift, and go to state 19
    LAMBDA      shift, and go to state 20
    LAMBDACAP   shift, and go to state 21
    MU          shift, and go to state 22
    NU          shift, and go to state 23
    XI          shift, and go to state 24
    XICAP       shift, and go to state 25
    PI          shift, and go to state 26
    PICAP       shift, and go to state 27
    SIGMA       shift, and go to state 28
    SIGMACAP    shift, and go to state 29
    TAU         shift, and go to state 30
    UPSILON     shift, and go to state 31
    PHI         shift, and go to state 32
    PHICAP      shift, and go to state 33
    VARPHI      shift, and go to state 34
    CHI         shift, and go to state 35
    PSI         shift, and go to state 36
    PSICAP      shift, and go to state 37
    OMEGA       shift, and go to state 38
    E           shift, and go to state 39
    INFINITY    shift, and go to state 40
    SQRT        shift, and go to state 41
    LOG         shift, and go to state 42
    LN          shift, and go to state 43
    ABS         shift, and go to state 44
    FLOOR       shift, and go to state 45
    CEIL        shift, and go to state 46
    ASIN        shift, and go to state 47
    ACOS        shift, and go to state 48
    ATAN        shift, and go to state 49
    SINH        shift, and go to state 50
    COSH        shift, and go to state 51
    TANH        shift, and go to state 52
    SECH        shift, and go to state 53
    CSCH        shift, and go to state 54
    COTH        shift, and go to state 55
    SIN         shift, and go to state 56
    COS         shift, and go to state 57
    TAN         shift, and go to state 58
    SEC         shift, and go to state 59
    CSC         shift, and go to state 60
    COT         shift, and go to state 61
    FRAC        shift, and go to state 62
    ROOT        shift, and go to state 63
    SUB         shift, and go to state 64
    LBRAC       shift, and go to state 65
    LSBRAC      shift, and go to state 66
    LCBRAC      shift, and go to state 67
    LANGLE      shift, and go to state 68
    LABRAC      shift, and go to state 69

    simpexpr  go to state 92
    left      go to state 75
    variable  go to state 76
    num       go to state 77
    greek     go to state 78
    const     go to state 79
    binfunc   go to state 80
    unary     go to state 81


State 82

    4 line: expr ENDL .

    $default  reduce using rule 4 (line)


State 83

    5 expr: intexpr expr .

    $default  reduce using rule 5 (expr)


State 84

   65 bin: ADD .

    $default  reduce using rule 65 (bin)


State 85

   66 bin: SUB .

    $default  reduce using rule 66 (bin)


State 86

   67 bin: MUL .

    $default  reduce using rule 67 (bin)


State 87

   68 bin: DIV .

    $default  reduce using rule 68 (bin)


State 88

    7 intexpr: simpexpr EXP . simpexpr
   69 bin: EXP .

    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    ALPHA       shift, and go to state 5
    BETA        shift, and go to state 6
    GAMMA       shift, and go to state 7
    GAMMACAP    shift, and go to state 8
    DELTA       shift, and go to state 9
    DELTACAP    shift, and go to state 10
    EPSILON     shift, and go to state 11
    VAREPSILON  shift, and go to state 12
    ZETA        shift, and go to state 13
    ETA         shift, and go to state 14
    THETA       shift, and go to state 15
    THETACAP    shift, and go to state 16
    VARTHETA    shift, and go to state 17
    IOTA        shift, and go to state 18
    KAPPA       shift, and go to state 19
    LAMBDA      shift, and go to state 20
    LAMBDACAP   shift, and go to state 21
    MU          shift, and go to state 22
    NU          shift, and go to state 23
    XI          shift, and go to state 24
    XICAP       shift, and go to state 25
    PI          shift, and go to state 26
    PICAP       shift, and go to state 27
    SIGMA       shift, and go to state 28
    SIGMACAP    shift, and go to state 29
    TAU         shift, and go to state 30
    UPSILON     shift, and go to state 31
    PHI         shift, and go to state 32
    PHICAP      shift, and go to state 33
    VARPHI      shift, and go to state 34
    CHI         shift, and go to state 35
    PSI         shift, and go to state 36
    PSICAP      shift, and go to state 37
    OMEGA       shift, and go to state 38
    E           shift, and go to state 39
    INFINITY    shift, and go to state 40
    SQRT        shift, and go to state 41
    LOG         shift, and go to state 42
    LN          shift, and go to state 43
    ABS         shift, and go to state 44
    FLOOR       shift, and go to state 45
    CEIL        shift, and go to state 46
    ASIN        shift, and go to state 47
    ACOS        shift, and go to state 48
    ATAN        shift, and go to state 49
    SINH        shift, and go to state 50
    COSH        shift, and go to state 51
    TANH        shift, and go to state 52
    SECH        shift, and go to state 53
    CSCH        shift, and go to state 54
    COTH        shift, and go to state 55
    SIN         shift, and go to state 56
    COS         shift, and go to state 57
    TAN         shift, and go to state 58
    SEC         shift, and go to state 59
    CSC         shift, and go to state 60
    COT         shift, and go to state 61
    FRAC        shift, and go to state 62
    ROOT        shift, and go to state 63
    LBRAC       shift, and go to state 65
    LSBRAC      shift, and go to state 66
    LCBRAC      shift, and go to state 67
    LANGLE      shift, and go to state 68
    LABRAC      shift, and go to state 69

    INT         [reduce using rule 69 (bin)]
    FLOAT       [reduce using rule 69 (bin)]
    ALPHA       [reduce using rule 69 (bin)]
    BETA        [reduce using rule 69 (bin)]
    GAMMA       [reduce using rule 69 (bin)]
    GAMMACAP    [reduce using rule 69 (bin)]
    DELTA       [reduce using rule 69 (bin)]
    DELTACAP    [reduce using rule 69 (bin)]
    EPSILON     [reduce using rule 69 (bin)]
    VAREPSILON  [reduce using rule 69 (bin)]
    ZETA        [reduce using rule 69 (bin)]
    ETA         [reduce using rule 69 (bin)]
    THETA       [reduce using rule 69 (bin)]
    THETACAP    [reduce using rule 69 (bin)]
    VARTHETA    [reduce using rule 69 (bin)]
    IOTA        [reduce using rule 69 (bin)]
    KAPPA       [reduce using rule 69 (bin)]
    LAMBDA      [reduce using rule 69 (bin)]
    LAMBDACAP   [reduce using rule 69 (bin)]
    MU          [reduce using rule 69 (bin)]
    NU          [reduce using rule 69 (bin)]
    XI          [reduce using rule 69 (bin)]
    XICAP       [reduce using rule 69 (bin)]
    PI          [reduce using rule 69 (bin)]
    PICAP       [reduce using rule 69 (bin)]
    SIGMA       [reduce using rule 69 (bin)]
    SIGMACAP    [reduce using rule 69 (bin)]
    TAU         [reduce using rule 69 (bin)]
    UPSILON     [reduce using rule 69 (bin)]
    PHI         [reduce using rule 69 (bin)]
    PHICAP      [reduce using rule 69 (bin)]
    VARPHI      [reduce using rule 69 (bin)]
    CHI         [reduce using rule 69 (bin)]
    PSI         [reduce using rule 69 (bin)]
    PSICAP      [reduce using rule 69 (bin)]
    OMEGA       [reduce using rule 69 (bin)]
    E           [reduce using rule 69 (bin)]
    INFINITY    [reduce using rule 69 (bin)]
    SQRT        [reduce using rule 69 (bin)]
    LOG         [reduce using rule 69 (bin)]
    LN          [reduce using rule 69 (bin)]
    ABS         [reduce using rule 69 (bin)]
    FLOOR       [reduce using rule 69 (bin)]
    CEIL        [reduce using rule 69 (bin)]
    ASIN        [reduce using rule 69 (bin)]
    ACOS        [reduce using rule 69 (bin)]
    ATAN        [reduce using rule 69 (bin)]
    SINH        [reduce using rule 69 (bin)]
    COSH        [reduce using rule 69 (bin)]
    TANH        [reduce using rule 69 (bin)]
    SECH        [reduce using rule 69 (bin)]
    CSCH        [reduce using rule 69 (bin)]
    COTH        [reduce using rule 69 (bin)]
    SIN         [reduce using rule 69 (bin)]
    COS         [reduce using rule 69 (bin)]
    TAN         [reduce using rule 69 (bin)]
    SEC         [reduce using rule 69 (bin)]
    CSC         [reduce using rule 69 (bin)]
    COT         [reduce using rule 69 (bin)]
    FRAC        [reduce using rule 69 (bin)]
    ROOT        [reduce using rule 69 (bin)]
    LBRAC       [reduce using rule 69 (bin)]
    LSBRAC      [reduce using rule 69 (bin)]
    LCBRAC      [reduce using rule 69 (bin)]
    LANGLE      [reduce using rule 69 (bin)]
    LABRAC      [reduce using rule 69 (bin)]
    $default    reduce using rule 69 (bin)

    simpexpr  go to state 93
    left      go to state 75
    variable  go to state 76
    num       go to state 77
    greek     go to state 78
    const     go to state 79
    binfunc   go to state 80
    unary     go to state 81


State 89

   12 simpexpr: simpexpr bin . simpexpr
